--- Version 0.5.5 - XXX-XX-2011
- All pages in the package installation dialog now support sorting and keyboard search
- Fixed: Converting from factor to string in the data editor set values to numeric, internally
- Allow entering factor labels instead of only numbers, when editing factors in the data editor
- Display logical values as "TRUE" and "FALSE" in data editor, and accept "T"/"TRUE"/"F"/"FALSE" in addition to "0"/"1" while editing
- Add support for R functions loadhistory(), savehistory(), history(), and timestamp ()
- Do not load .RData file from current directory by default (configurable)
- Fixed: On Windows, a wrong locale for LC_NUMERIC would be applied, resulting in malfunction of pdf() and postscript()
- Fixed: Did not use system configured background color in data editor
- Fixed: New columns would be always be added to the right, instead of to the left, in the data editor
- Fixed: Would crash when trying to edit 0 row data.frame
- Fixed: Output generated by external processes (system()) was not shown on the console
- Fixed: Converting a variable to factor in the editor would drop existing levels, silently, and lead to NAs
- Fixed: Cursor would keep jumping to the end, when typing a filename in the filename selection field in plugins
- Fixed: Submit button would not become enabled in "Basic Statistics" plugin
- Moved automated testing framework moved to a dedicated R package "rkwardtests", and added documentation
- Support pasting to the middle of the current command line in the R Console
- Better handling of script-editor commands while the R Console is busy
- Correct interleaving of multi-line commands and the corresponding output in the R Console
- Fixed: Portions of multi-line commands entered on the R Console would be run twice under some circumstances
- Fixed: Lockups or crashes when using packages RGtk2 or rJava on the X11 platform
- Fixed: R task callback handlers were not called
- GUI frontend and R backend now run in separate processes