@@ -1,4 +1,5 @@
 --- Version 0.5.5 - XXX-XX-2011
+- Fixed: Potential crashes when changing length of a data.frame that is currently opened for editing from R code
 - All pages in the package installation dialog now support sorting and keyboard search
 - Fixed: Converting from factor to string in the data editor set values to numeric, internally
 - Allow entering factor labels instead of only numbers, when editing factors in the data editor
